--- a/static/assignment561/hw06.Rmd
+++ b/static/assignment561/hw06.Rmd
@@ -152,10 +152,26 @@ The mean and variance do not exist for the Cauchy distribution. So the parameter
 
 (a) $\mu$ is the median of the distribution of X, that is, $P(X\ge\mu)=P(X\le\mu)=1/2$.
 
+According to Theorem 3.5.6, f(x) is pdf, $\mu,\sigma\in\mathbf{R}$, $\sigma>0$. X is a random variable with pdf ($1/\sigma)f((x-\mu)/\sigma$) when and only when Z is a random variable with pdf f(z) and $X=\sigma Z+\mu$
+
+$$P(X>x_{\alpha})=P(\sigma Z+\mu>\sigma z_{\alpha}+\mu)= P(Z>z_{\alpha})=\int_{z_{\alpha}}^{\infty}f(z)dz=\alpha $$
+
+Let $X=\sigma Z+\mu$
+
+$$P(X\ge\mu)=P(\sigma Z+\mu\ge\mu)=P(Z\ge0)=\int_0^{\infty}\frac{1}{\sigma\pi(1+z^2)}d(\sigma z+\mu)$$
+$$=\int_0^{\infty}\frac{1}{\pi(1+z^2)}dz=\frac{1}{\pi}\left.\tan^{-1}z\right|_0^{\infty}=\frac{1}{\pi}(\frac\pi2-0)=\frac{1}{2}$$
+
+In same way, $P(X\le\mu)=\frac12$. Therefore, $\mu$ is the median of the distribution of X.
+
 ****
 (b) $\mu+\sigma$ and $\mu-\sigma$ are the quartiles of the distribution of X, that is, $P(X\ge\mu+\sigma)=P(X\le\mu-\sigma)=1/4$. (Hint: Prove this first for $\mu=0$ and $\sigma=1$ and then use Exercise 3.38.)
 
-According to Theorem 3.5.6, f(x) is pdf, $\mu,\sigma\in\mathbf{R}$, $\sigma>0$. X is a random variable with pdf ($l/\sigma)f((x-\mu)/\sigma$) when and only when Z is a random variable with pdf f(z) and $X=\sigma Z+\mu$
+In same way, let $X=\sigma Z+\mu$
+$$P(X\ge\mu+\sigma)=P(\sigma Z+\mu\ge\mu+\sigma)=P(Z\ge1)=\int_1^{\infty}\frac{1}{\sigma\pi(1+z^2)}d(\sigma z+\mu)$$
 
-$$\therefore P(X>x_{\alpha})=P(\sigma Z+\mu>\sigma z_{\alpha}+\mu)= P(Z>z_{\alpha})=\alpha $$
-$$\alpha= P ( Z > z_{\alpha}) =\int_{z_{\alpha}}^{\infty}f(z)dz.$$
+$$\int_1^{\infty}\frac{1}{\pi(1+z^2)}dz=\frac{1}{\pi}\left.\tan^{-1}z\right|_1^{\infty}=\frac{1}{\pi}(\frac\pi2-\frac\pi4)=\frac{1}{4}$$
+
+In same way, $P(X\le\mu-\sigma)=\frac14$. Therefore, $\mu+\sigma$ and $\mu-\sigma$ are the quartiles of the distribution of X.
+
+
+
