--- a/docs/assignment564/lab00.Rmd
+++ b/docs/assignment564/lab00.Rmd
@@ -170,3 +170,95 @@ model_solar_mass_origin <- lm(PlantBiomass ~ SolarRadiation+0, data=table_plant)
 model_solar_mass_origin%>% summary()
 anova(model_solar_mass_origin)
 ```
+
+## lab 3
+
+```{r, echo=TRUE}
+# Load the package 
+library(readxl)
+library(tidyverse)
+library(broom)
+# Import Data
+table_wine <- read_csv("TableB11.csv")
+# Observe the data frame
+head(table_wine)
+summary(table_wine)
+# visualizng Satisfaction and Age
+plot(table_wine,pch=16)
+
+# matrix of correlation coefficients
+round(cor(table_wine),digits = 3)
+
+# build the model
+model_wine_quality <- lm(Quality ~ Clarity + Aroma + Body + Flavor + Oakiness + Region, data=table_wine)
+model_wine_quality%>% summary()
+anova(model_wine_quality)
+
+car::Anova(model_wine_quality, type="II")
+# two kinds of confident intervals
+confint(model_wine_quality, level = 0.95)
+
+confint(model_wine_quality, level = 1-(0.05/7))
+
+# Scheffe joint confidence interval
+B.hat_wine <- coefficients(model_wine_quality)
+B.StdErr_wine <- coef(summary(model_wine_quality))[,2]
+df1_wine <- length(B.hat_wine)
+df2_wine <- nrow(table_wine)-df1_wine
+F_wine <- qf(0.05,df1_wine,df2_wine)
+
+cbind((B.hat_wine-sqrt(2*F_wine)*B.StdErr_wine),(B.hat_wine-sqrt(2*F_wine)*B.StdErr_wine))
+
+# Prediction
+predict(model_wine_quality,data.frame(Clarity=0.9, Aroma=4.7, Body=6.1, Flavor=5.2, Oakiness=3, Region=2),interval = "confidence", level=0.99)
+
+predict(model_wine_quality,data.frame(Clarity=0.9, Aroma=4.7, Body=6.1, Flavor=5.2, Oakiness=3, Region=2),interval = "prediction", level=0.99)
+
+# Obtain the Design Matrix (X) for the regression model #
+# Include only the predictors in the model and no response #
+x_wine <- model.matrix(~ Clarity + Aroma + Body + Flavor + Oakiness + Region, data =
+table_wine)
+x_wine # Display the design matrix #
+xpx.inv_wine <- solve(t(x_wine)%*%x_wine) # Computes Inverse of (X'X) matrix #
+xpx.inv_wine
+round(xpx.inv, digits=4) # round with 4 decimal places #
+
+# Check confidence and prediction interval of response #
+x0_wine <- c(1,0.9,4.7, 6.1, 5.2, 3, 2)
+predict_x0_wine <- t(x0_wine)%*%B.hat_wine
+predict.stderr_CI_wine <- sqrt(1.395*t(x0_wine)%*%xpx.inv_wine%*%x0_wine)
+predict.CI_wine <- c((predict_x0_wine - qt(0.995, 38-7)*predict.stderr_CI_wine), (predict_x0_wine + qt(0.995, 38-
+7)*predict.stderr_CI_wine))
+predict.CI_wine
+predict.stderr_PI_wine <- sqrt(1.395*(1+(t(x0_wine)%*%xpx.inv_wine%*%x0_wine)))
+predict.PI <- c((predict_x0_wine - qt(0.995, 38-7)*predict.stderr_PI_wine), (predict_x0_wine + qt(0.995, 38-
+7)*predict.stderr_PI_wine))
+predict.PI
+
+# Test significance of linear function of regression coefficients #
+# The linearHypothesis function defined in the car package can be used for this #
+
+T_b4_wine <- c(0,0,0,0,1,0,0) # Define T matrix for testing B4=0 versus B4 not= 0 #
+T_b4_wine <- c(rep(0,4),1,0,0) # Define T matrix for testing B4=0 versus B4 not= 0 #
+T_b4_wine
+car::linearHypothesis(model = model_wine_quality, hypothesis.matrix =T_b4_wine , rhs=0)
+# The rhs option specifies value on the right hand side of hypotheses #
+T_2b2_b3_wine <- c(0, 0, 2, -1, 0, 0, 0) # Define T matrix for testing 2B2=B3 versus 2B2 not= B3 #
+T_2b2_b3_wine
+car::linearHypothesis(model = model_wine_quality, hypothesis.matrix = T_2b2_b3_wine, rhs=0) #Test T2=0 versus T2 not= 0 #
+# Define T matrix for testing the above hypotheses simultaneously #
+# Use rbind function to bind two rows, The rep function is used to create replications of the same value #
+T_b4.2b2_b3_wine <- rbind(c(rep(0,4), 1, 0, 0), c(0, 0, 2, -1, 0, 0, 0))
+T_b4.2b2_b3_wine
+car::linearHypothesis(model = model_wine_quality, hypothesis.matrix = T_b4.2b2_b3_wine, rhs=c(0,0)) # Test the above two hypotheses simultaneously #
+# Check for multicollinearity #
+# Use the vif function defined in the car package #
+car::vif(mod = model_wine_quality)
+# Fit reduced multiple linear regression model with only flavor and oakiness predictors #
+model_wine_flavor_oakiness <- lm(Quality ~ Flavor + Oakiness , data = table_wine)
+# The anova function gives Sequential (Type I) Sum of Squares of Regression #
+anova(model_wine_flavor_oakiness)
+# SS for Model (or Regression) = Total of Sum Sq values for Predictors #
+# df for Model (or Regression) = Total of Df values for Predictors #
+
+```
