--- a/docs/assignment564/lab00.Rmd
+++ b/docs/assignment564/lab00.Rmd
@@ -195,6 +195,8 @@ model_wine_quality%>% summary()
 anova(model_wine_quality)
 
 car::Anova(model_wine_quality, type="II")
+
+
 # two kinds of confident intervals
 confint(model_wine_quality, level = 0.95)
 
@@ -221,7 +223,7 @@ table_wine)
 x_wine # Display the design matrix #
 xpx.inv_wine <- solve(t(x_wine)%*%x_wine) # Computes Inverse of (X'X) matrix #
 xpx.inv_wine
-round(xpx.inv, digits=4) # round with 4 decimal places #
+round(xpx.inv_wine, digits=4) # round with 4 decimal places #
 
 # Check confidence and prediction interval of response #
 x0_wine <- c(1,0.9,4.7, 6.1, 5.2, 3, 2)
