--- a/docs/assignment564/lab00.Rmd
+++ b/docs/assignment564/lab00.Rmd
@@ -220,7 +220,7 @@ predict(model_wine_quality,data.frame(Clarity=0.9, Aroma=4.7, Body=6.1, Flavor=5
 # Include only the predictors in the model and no response #
 x_wine <- model.matrix(~ Clarity + Aroma + Body + Flavor + Oakiness + Region, data =
 table_wine)
-x_wine # Display the design matrix #
+head(x_wine) # Display the design matrix #
 xpx.inv_wine <- solve(t(x_wine)%*%x_wine) # Computes Inverse of (X'X) matrix #
 xpx.inv_wine
 round(xpx.inv_wine, digits=4) # round with 4 decimal places #
