--- a/static/assignment564/lab00.Rmd
+++ b/static/assignment564/lab00.Rmd
@@ -225,6 +225,10 @@ xpx.inv_wine <- solve(t(x_wine)%*%x_wine) # Computes Inverse of (X'X) matrix #
 xpx.inv_wine
 round(xpx.inv_wine, digits=4) # round with 4 decimal places #
 
+vcov(model_wine_quality)
+
+table_wine %>% corrr::correlate() %>% corrr::fashion()
+
 # Check confidence and prediction interval of response #
 x0_wine <- c(1,0.9,4.7, 6.1, 5.2, 3, 2)
 predict_x0_wine <- t(x0_wine)%*%B.hat_wine
