--- a/docs/assignment564/lab04.Rmd
+++ b/docs/assignment564/lab04.Rmd
@@ -30,7 +30,7 @@ $$
  
 $$y=β_0+β_1(x_1+x_2)+β_3(x_3+x_4)+ε$$
  
- $$\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 1 & -1 & 0 \end{bmatrix}_{2\times5} 
+ $$\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 0 & 1 & -1 \end{bmatrix}_{2\times5} 
 \mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
 \mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=2$$
  
@@ -40,7 +40,7 @@ $$β_1=-2β_2=2β_3 \\
 y=β_0+β_1(x_1-\frac12x_2+\frac12x_3)+β_4 x_4+ε$$
 
 
-$$\mathbf{T}=\begin{bmatrix} 0 & 1 & -2 & 0 & -4 \\ 0 & 1 & 2 & 0 & 0 \end{bmatrix}_{2\times5} 
+$$\mathbf{T}=\begin{bmatrix} 0 & 1 & -2 & -4 & 0 \\ 0 & 1 & 2 & 0 & 0 \end{bmatrix}_{2\times5} 
 \mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
 \mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=2$$
 
@@ -56,25 +56,28 @@ $$\because \mathbf{y=Xβ+ε},\quad  Var(ε)=\sigma^2\mathbf{I}$$
 
 $$\therefore Var(\mathbf{\hat y})=H\cdot Var(\mathbf{Xβ+ε})\cdot H'=H\cdot Var(\mathbf{ε})\cdot H'=H\cdot \sigma^2\mathbf{I}\cdot H'=\sigma^2\mathbf{H}$$
 
+$$\because \sigma\ \text{is a constant, H is symmatric and idenogent.}$$
+$$\therefore H\cdot \sigma^2\mathbf{I}\cdot H'=\sigma^2\mathbf{HH'}=\sigma^2\mathbf{HH}=\sigma^2\mathbf{H}$$
+
 ### Problem 3: 
 
 The $(X'X)^{(-1)}$ for the $y=β_0+β_1 x_1+β_2 x_2+β_3 x_3+β_4 x_4+ε$ is given below. If MSE = 0.513 and n=9, compute the 
 
 (a) $Var(\hatβ_1)$
 
-$$Var(\mathbf{\hat\beta_1})=MSE\times C_{11}=0.513\times11.423=5.85999$$
+$$Var(\mathbf{\hat\beta_1})=MSE\times C_{22}=0.513\times4.624=2.372112$$
 
 (b) $se(\hatβ_3)$
 
-$$se(\mathbf{\hat\beta_3})=\sqrt{MSE\times C_{33}}=\sqrt{0.513\times3.978}=1.428536$$
+$$se(\mathbf{\hat\beta_3})=\sqrt{MSE\times C_{44}}=\sqrt{0.513\times0.031}=0.1261071$$
 
 (c) $Cov(\hatβ_1,\hatβ_3)$
 
-$$Cov(\mathbf{\hat\beta_1,\hat\beta_3})=MSE\times C_{13}=0.513\times(-0.790)=-0.40527$$
+$$Cov(\mathbf{\hat\beta_1,\hat\beta_3})=MSE\times C_{24}=0.513\times(-0.346)=-0.177498$$
 
 (d) $Cor(\hatβ_1\hat,β_3)$
 
-$$Cor(\mathbf{\hat\beta_1,\hat\beta_3})=\frac{Cov(\mathbf{\hat\beta_1,\hat\beta_3})}{se(\mathbf{\hat\beta_1})se(\mathbf{\hat\beta_3})}=\frac{-0.40527}{2.420743\times1.428536}=-0.1171938$$
+$$Cor(\mathbf{\hat\beta_1,\hat\beta_3})=\frac{Cov(\mathbf{\hat\beta_1,\hat\beta_3})}{se(\mathbf{\hat\beta_1})se(\mathbf{\hat\beta_3})}=\frac{-0.177498}{1.540166\times0.1261071}=-0.913874$$
 
 (e) Based on what you found in the previous part(s), explain the relationship between $\hatβ_1$ and $\hatβ_3$.
 
@@ -116,7 +119,7 @@ x2 |0.003598  |0.000695 | 5.177 |2.66e-05
 x7 |0.193960  |0.088233 | 2.198 |0.037815
 x8 |-0.004816 |0.001277 | -3.771|0.000938
 
-Each variable has a significantly effect for the response variable on 95% confident level. x2 has slight positive affect. x7 has strong positive affect but not as significant as other variables. x8 has slight negative affect.
+Each parameter is significant differnct with zero on 95% confident level. x2 has weak positive affect on response variable. x7 has strong positive affect but not as significant as other variables. x8 has weak negative affect.
 
 d. R-square and adjusted R-square
 
@@ -151,15 +154,15 @@ B<- data.frame(
    b3=c( 0.486,-0.346, 0.135, 0.031,-0.005),
    b4=c(-0.196, 0.024, 0.063,-0.005, 0.011))
 # Var($\hat b_1$)
-0.513*B[1,1]
+0.513*B[2,2]
 # se(b1)
-sqrt(0.513*B[1,1])
+sqrt(0.513*B[2,2])
 # se(b3)
-sqrt(0.513*B[3,3])
+sqrt(0.513*B[4,4])
 # cov(b1,b3)
-0.513*B[1,3]
+0.513*B[2,4]
 # cor(b1,b3)
-(0.513*B[1,3])/((sqrt(0.513*B[1,1]))*(sqrt(0.513*B[3,3])))
+(0.513*B[2,4])/((sqrt(0.513*B[2,2]))*(sqrt(0.513*B[4,4])))
 ```
 
 
@@ -185,6 +188,7 @@ anova(model_2_7_8)
 # 3.1e ANOVA for reduced model on x7
 anova(model_2_8)
 # calculate partial F
+anova(model_2_7_8,model_2_8)
 (83.938-69.870)/1/2.911
 
 # 3.2 calculate cor(yi,\hat yi)
