--- a/docs/assignment564/lab04.Rmd
+++ b/docs/assignment564/lab04.Rmd
@@ -81,15 +81,17 @@ $$Cor(\mathbf{\hat\beta_1,\hat\beta_3})=\frac{Cov(\mathbf{\hat\beta_1,\hat\beta_
 
 (e) Based on what you found in the previous part(s), explain the relationship between $\hatβ_1$ and $\hatβ_3$.
 
-The value of $Cor(\mathbf{\hat\beta_1,\hat\beta_3})$ is negative and close to zero. There is a slightly negative relationship between $\hatβ_1$ and $\hatβ_3$.
+The value of $Cor(\mathbf{\hat\beta_1,\hat\beta_3})$ is negative and close to zero. There is a strong negative relationship between $\hatβ_1$ and $\hatβ_3$.
 
 (f) Without computing variance for all the estimators, explain which estimator is the least consistent.
 
-$C_{11}=11.423$ is the lagest variance of parameter. $\hatβ_0$ is the least consistent.
+Among the estimators, $\hatβ_0$ has the the lagest variance $C_{22}=4.624$. $x_1$ has the least consistent. While C_{11}=11.423$ is the lagest variance of parameter.  
 
 (g) Without computing covariances for all the pairs of estiamtors, list the pair(s) of estimators that are negatively correlated. Provide a reason.
 
-According to the $(X'X)^{(-1)},\ C_{12},\ C_{13},\ C_{23},\ C_{24},\ C_{15}$ are negative. Therefore, negatively correlated pairs of estimators include $\hatβ_1$ and $\hatβ_2$, $\hatβ_1$ and $\hatβ_3$, $\hatβ_2$ and $\hatβ_3$, $\hatβ_2$ and $\hatβ_4$, $\hatβ_1$ and $\hatβ_5$.
+According to the $(X'X)^{(-1)},\ C_{12},\ C_{13},\ C_{15},\ C_{23},\ C_{24},\ C_{45}$ are negative. \\
+The negatively correlated pairs of parameters are $\hatβ_0$ and $\hatβ_1$, $\hatβ_0$ and $\hatβ_2$, $\hatβ_0$ and $\hatβ_4$, $\hatβ_1$ and $\hatβ_2$, $\hatβ_1$ and $\hatβ_3$, $\hatβ_3$ and $\hatβ_4$.\\
+Therefore, the negatively correlated pairs of estimators include $x_1$ and $x_2$, $x_1$ and $x_3$, $\x_3$ and $x_4$.
 
 ### Problem 4: 
 
