--- a/static/assignment564/lab04.Rmd
+++ b/static/assignment564/lab04.Rmd
@@ -81,17 +81,17 @@ $$Cor(\mathbf{\hat\beta_1,\hat\beta_3})=\frac{Cov(\mathbf{\hat\beta_1,\hat\beta_
 
 (e) Based on what you found in the previous part(s), explain the relationship between $\hatβ_1$ and $\hatβ_3$.
 
-The value of $Cor(\mathbf{\hat\beta_1,\hat\beta_3})$ is negative and close to zero. There is a strong negative relationship between $\hatβ_1$ and $\hatβ_3$.
+The value of $Cor(\mathbf{\hat\beta_1,\hat\beta_3})$ is close to negative 1. There is a strong negative relationship between $\hatβ_1$ and $\hatβ_3$.
 
 (f) Without computing variance for all the estimators, explain which estimator is the least consistent.
 
-Among the estimators, $\hatβ_0$ has the the lagest variance $C_{22}=4.624$. $x_1$ has the least consistent. While C_{11}=11.423$ is the lagest variance of parameter.  
+Among the estimators, $\hatβ_1$ has the the lagest variance $C_{22}=4.624$. $x_1$ has the least consistent. While $C_{11}=11.423$ is the lagest variance of parameter.  
 
 (g) Without computing covariances for all the pairs of estiamtors, list the pair(s) of estimators that are negatively correlated. Provide a reason.
 
-According to the $(X'X)^{(-1)},\ C_{12},\ C_{13},\ C_{15},\ C_{23},\ C_{24},\ C_{45}$ are negative. \\
-The negatively correlated pairs of parameters are $\hatβ_0$ and $\hatβ_1$, $\hatβ_0$ and $\hatβ_2$, $\hatβ_0$ and $\hatβ_4$, $\hatβ_1$ and $\hatβ_2$, $\hatβ_1$ and $\hatβ_3$, $\hatβ_3$ and $\hatβ_4$.\\
-Therefore, the negatively correlated pairs of estimators include $x_1$ and $x_2$, $x_1$ and $x_3$, $\x_3$ and $x_4$.
+According to the $(X'X)^{(-1)},\ C_{12},\ C_{13},\ C_{15},\ C_{23},\ C_{24},\ C_{45}$ are negative. 
+The negatively correlated pairs of parameters are $\hatβ_0$ and $\hatβ_1$, $\hatβ_0$ and $\hatβ_2$, $\hatβ_0$ and $\hatβ_4$, $\hatβ_1$ and $\hatβ_2$, $\hatβ_1$ and $\hatβ_3$, $\hatβ_3$ and $\hatβ_4$.
+Therefore, the negatively correlated pairs of estimators include $x_1$ and $x_2$, $x_1$ and $x_3$, $x_3$ and $x_4$.
 
 ### Problem 4: 
 
@@ -135,7 +135,12 @@ This partial F satistic is the square of the t sattistic for x7 in full modle.
 
 3.2 The correlation
 
-$$Cor(y_i,\hat y_i)=0.8867395\quad \text{which is same with}\quad r=\sqrt{R^2}=\sqrt{0.7863}=0.8867356$$
+$$Cor(y_i,\hat y_i)=\frac{Cov(y_i,\hat y_i)}{\sqrt{Var(y_i)Var(\hat y_i)}}
+=\sqrt{\frac{Var(y_i,\hat y_i)}{Var(y_i)Var(\hat y_i)}}=\sqrt{\frac{\sum(y_i-\hat y_i)^2}{\sum(y_i)^2\sum(\hat y_i)^2}}=\sqrt{0.7863}=0.8867395$$
+
+$$R^2=1-\frac{SSE}{SST}=1-\frac{69.870}{326.964}=0.7863$$
+
+Therefore, square of simple corelation coefficient between $y_i$ and $\hat y_i$ equal R-squared.
 
 3.3 The confidence intervals
 
