--- a/docs/assignment564/lab04.Rmd
+++ b/docs/assignment564/lab04.Rmd
@@ -201,6 +201,8 @@ anova(model_2_7_8,model_2_8)
 # 3.2 calculate cor(yi,\hat yi)
 augment(model_2_7_8)
 cor(select(augment(model_2_7_8),y,.fitted))
+# another way
+cor(table_b1[,1],predict(model_2_7_8, table_b1[,c(3,8,9)]))
 # calculate r
 sqrt(0.7863)
 
